# yorkz-nd-mem-experiment

./: .gitignore  DEVELOPMENT_PLAN.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test-output.xml
.github/: copilot-instructions.md
.github/agent-kit/: README.md
.github/agent-kit/templates/: copilot-instructions.md  explore_memory_city.prompt.md  (+5 more)
.github/agents/: memory-driven-template.agent.md  neurodivergent-agent.agent.md
.github/hooks/: guard-main-targeting.json  protect-destructive-git.json  session-start-context.json
.github/instructions/: nd-memory-workflow.instructions.md
.github/prompts/: memory-driven-issue-execution.prompt.md
.github/workflows/: release.yml
campaigns/inheritance-manor/: prologue-snapshot.json
docs/GDD/: Master Game Design Document –  The Inheritance Manor.md
docs/initial drafts/: draft-inheritance-manor-memories.json  manor-campaign-synopsis.json  predictive-assistant-model.md
plans/inheritance-manor-gdd-deep-plans/: 01-gdd-gap-analysis.md  02-narrative-story-structure.md  03-world-location-design.md  04-systems-memory-model.md  05-npc-relationship-design.md  06-technical-architecture.md  07-content-pipeline-and-snapshots.md  08-mvp-roadmap.md  README.md  implementation.md  plan.md
src/yorkz/: __init__.py  content_pipeline.py  memory_system.py  turn_orchestration.py  vertical_slice_runtime.py
src/yorkz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_campaign_snapshot.py  test_memory_system.py  test_turn_orchestration.py  test_vertical_slice_runtime.py
(+3 files in other folders)
